[gd_scene load_steps=6 format=3 uid="uid://d8k734q4jrtr"]

[ext_resource type="Script" uid="uid://c2o07aoct6nl6" path="res://ui/credits/credits.gd" id="1_2n5wy"]
[ext_resource type="AudioStream" uid="uid://08jruo1f2n62" path="res://assets/music/bach-toccata-and-fugue-in-d-minor-bwv-565-250589.mp3" id="1_ydyd3"]
[ext_resource type="FontFile" uid="uid://b04nea38ijl6i" path="res://assets/fonts/UnifrakturMaguntia/UnifrakturMaguntia-Regular.ttf" id="3_nnsry"]

[sub_resource type="InputEventAction" id="InputEventAction_2n5wy"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_nnsry"]
events = [SubResource("InputEventAction_2n5wy")]

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2n5wy")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_ydyd3")
volume_db = -5.0
autoplay = true

[node name="CreditsRoll" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 360.5
offset_bottom = 2677.5
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="CreditsRoll"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nnsry")
theme_override_font_sizes/font_size = 32
text = "Credits"
horizontal_alignment = 1

[node name="Text" type="RichTextLabel" parent="CreditsRoll"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center]
[b][url=https://www.youtube.com/@OrwaFarran]Orwa Farran[/url][/b]
[url=https://www.youtube.com/watch?v=SyJiBEXU1jo]Game Main Menu Music ( 5th Album ) / copyright free music[/url]

[b][url=https://en.wikipedia.org/wiki/Johann_Sebastian_Bach]Bach[/url], [url=https://pixabay.com/users/gregorquendel-19912121/]GregorQuendel[/url][/b]
[url=https://pixabay.com/music/solo-classical-instruments-bach-toccata-and-fugue-in-d-minor-bwv-565-250589/]Bach - Toccata and Fugue in D minor, BWV 565[/url]

[b][url=https://brendonnogard.itch.io/]brendonnogard[/url][/b]
[url=https://brendonnogard.itch.io/campfire-pixel-art-free-asset]Campfire Pixel Art - Free Asset[/url]

[b][url=https://pixabay.com/users/grand_project-19033897/]Grand_Project[/url][/b]
[url=https://pixabay.com/music/build-up-scenes-apocalypse-128378/]Apocalypse[/url]

[b][url=https://szadiart.itch.io/]Szadi art.[/url][/b]
[url=https://szadiart.itch.io/rpg-worlds-ca]RPG Worlds Caves[/url]
[url=https://szadiart.itch.io/fantasy-lands-houses-demo]Fantasy Lands Houses Demo[/url]
[url=https://szadiart.itch.io/animated-character-pack]Animated Character Pack[/url]
[url=https://szadiart.itch.io/houses-pack]Houses Pack[/url]
[url=https://szadiart.itch.io/3-direction-npc-characters]3 Direction NPC Characters[/url]

[b][url=https://seliel-the-shaper.itch.io/]Seliel the Shaper[/url][/b]
[url=https://seliel-the-shaper.itch.io/winter-forest]Free Pixel Art Tileset - Winter Forest[/url]

[b][url=https://atebits.itch.io/]AteBits[/url][/b]
[url=https://atebits.itch.io/health-pack]Health Asset Pack[/url]

[b][url=https://karsiori.itch.io/]karsiori[/url][/b]
[url=https://karsiori.itch.io/pixel-art-potion-pack-animated]FREE Pixel Art Potion Pack - Animated[/url]

[b][url=https://opengameart.org/users/alizards]alizard[/url][/b]
[url=https://opengameart.org/content/pixel-wolf]pixel wolf[/url]

[b][url=https://toffeecraft.itch.io/]ToffeeCraft[/url][/b]
[url=https://toffeecraft.itch.io/cat-sleeping-animation-free]Cat Sleeping Animation FREE[/url]

[b][url=https://gealach-studios.itch.io/]Gealach Studios[/url][/b]
[url=https://gealach-studios.itch.io/lumberjack-character-sprite-animations]Lumberjack Character Sprite (+ Animations) Pack[/url]

[b][url=https://xzany.itch.io/]Mattz Art[/url][/b]
[url=https://xzany.itch.io/top-down-adventurer-character]Adventurer 2D Top-Down[/url]

[b][url=https://pixabay.com/users/universfield-28281460/]Universfield[/url][/b]
[url=https://pixabay.com/sound-effects/male-exertion-grunts-02-352731/]Male Exertion Grunts 02[/url]

[b][url=https://fonts.google.com/?query=Astigmatic]Astigmatic[/url][/b]
[url=https://fonts.google.com/specimen/Quintessential]Quintessential[/url]

[b][url=https://fonts.google.com/?query=j.+%27mach%27+wust]j. 'mach' wust[/url][/b]
[url=https://fonts.google.com/specimen/UnifrakturMaguntia]UnifrakturMaguntia[/url]

[b][url=https://pixabay.com/users/king_of_the_christmas-6030238/]King_of_The_Christmas[/url][/b]
[url=https://pixabay.com/sound-effects/fireplace-loop-original-noise-178209/]Fireplace Loop Original Noise[/url]

[b][url=https://pixabay.com/users/freesound_community-46691455/]Fabrizio84 (Freesound)[/url][/b]
[url=https://pixabay.com/sound-effects/wind-artificial-18750/]Wind (Artificial)[/url]

[b][url=https://pixabay.com/users/dragon-studio-38165424/]DRAGON-STUDIO[/url][/b]
[url=https://pixabay.com/sound-effects/windstorm-ambience-372486/]Windstorm Ambience[/url]

[b][url=https://pixabay.com/users/the-vampires-monster-49503589/]The-Vampires-Monster[/url][/b]
[url=https://pixabay.com/sound-effects/bat-chirping-type-2-355965/]Bat Chirping Type 2[/url]

[b][url=https://pixabay.com/users/freesound_community-46691455/]ryansitz (Freesound)[/url][/b]
[url=https://pixabay.com/sound-effects/poof-80161/]Poof[/url]

[b][url=https://pixabay.com/users/storegraphic-49061086/]storegraphic[/url][/b]
[url=https://pixabay.com/sound-effects/punch-and-hits-310521/]Punch and Hits[/url]

[b][url=https://pixabay.com/users/freesound_community-46691455/]FocusBay (Freesound)[/url][/b]
[url=https://pixabay.com/sound-effects/main-door-opening-closing-38280/]Main Door Opening-Closing[/url]

[b][url=https://pixabay.com/users/freesound_community-46691455/]vmgraw (Freesound)[/url][/b]
[url=https://pixabay.com/sound-effects/scream-85294/]SCREAM[/url]

[b][url=https://pixabay.com/users/musicholder-40448081/]MUSICHOLDER[/url][/b]
[url=https://pixabay.com/sound-effects/sword-sound-260274/]sword-sound[/url]

[b][url=https://pixabay.com/users/vinodadora-30315691/]Vinodadora[/url][/b]
[url=https://pixabay.com/sound-effects/male-death-sound-128357/]male-death-sound[/url]

[b][url=https://pixabay.com/users/fxprosound-41783058/]FxProSound[/url][/b]
[url=https://pixabay.com/sound-effects/magic-charge-mana-2-186628/]Magic charge mana 2[/url]

[b][url=https://pixabay.com/users/freesound_community-46691455/]mattgarkusha (Freesound)[/url][/b]
[url=https://pixabay.com/sound-effects/grunts-33249/]grunts[/url]

[b][url=https://pixabay.com/users/freesound_community-46691455/]matt_beer (Freesound)[/url][/b]
[url=https://pixabay.com/sound-effects/timber-tree-falling-1-40384/]timber tree falling 1[/url]

[b][url=https://pixabay.com/users/freesound_community-46691455/]TRP (Freesound)[/url][/b]
[url=https://pixabay.com/sound-effects/axe-chop-sequence-v1-mixed-54629/]Axe chop sequence v1 MIXED[/url]

[b][url=https://pixabay.com/users/alice_soundz-44907632/]Alice_soundz[/url][/b]
[url=https://pixabay.com/sound-effects/scary-wolf-growling-224086/]SCARY WOLF GROWLING[/url]

[b][url=https://pixabay.com/users/freesound_community-46691455/]belen_abo (Freesound)[/url][/b]
[url=https://pixabay.com/sound-effects/puppy-crying-60401/]Puppy crying[/url]

[b][url=https://pixabay.com/users/universfield-28281460/]Universfield[/url][/b]
[url=https://pixabay.com/sound-effects/punch-03-352040/]Punch 03[/url]
[/center]"
scroll_active = false

[node name="MainMenuButton" type="Button" parent="CreditsRoll"]
layout_mode = 2
shortcut = SubResource("Shortcut_nnsry")
shortcut_in_tooltip = false
text = "Main Menu"

[connection signal="meta_clicked" from="CreditsRoll/Text" to="." method="_on_text_meta_clicked"]
[connection signal="pressed" from="CreditsRoll/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
